Report issue page design mostly implemented.
* Map search box messed up.
* File selector not quite correct.

--- a/app/assets/stylesheets/content.css.scss
+++ b/app/assets/stylesheets/content.css.scss
@@ -16,7 +16,7 @@
     &.content-wide-sidebar {
       width: 570px;
     }
-    .tags {
+    div.tags {
       overflow: hidden;
       p {
         font-size: 12px;
